--- a/CRA/laba9/package.json
+++ b/CRA/laba9/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.14.2",
+    "@chakra-ui/react": "^3.15.0",
+    "@chakra-ui/theme": "^3.4.6",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "axios": "^1.8.4",
-    "framer-motion": "^12.5.0",
+    "framer-motion": "^12.6.3",
+    "moment": "^2.30.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
